[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/movement.gd" type="Script" id=1]
[ext_resource path="res://Picture_Imports/Backgrounds/right_button.png" type="Texture" id=2]
[ext_resource path="res://Picture_Imports/Backgrounds/left_button.png" type="Texture" id=3]
[ext_resource path="res://Picture_Imports/Items/double_up_arrow.png" type="Texture" id=4]
[ext_resource path="res://Picture_Imports/Items/circle.png" type="Texture" id=5]
[ext_resource path="res://Picture_Imports/Items/sword.png" type="Texture" id=6]
[ext_resource path="res://Picture_Imports/Items/dash.png" type="Texture" id=7]

[node name="DirectionButtons" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Left_Buttons" type="Control" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LEFT" type="TouchScreenButton" parent="CanvasLayer/Left_Buttons"]
position = Vector2( 64, -80 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 3 )

[node name="RIGHT" type="TouchScreenButton" parent="CanvasLayer/Left_Buttons"]
position = Vector2( 224, -80 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 2 )

[node name="Right_Buttons" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump" type="TouchScreenButton" parent="CanvasLayer/Right_Buttons"]
self_modulate = Color( 1, 1, 1, 0.176471 )
position = Vector2( -280, -122 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 5 )

[node name="JUMP" type="TouchScreenButton" parent="CanvasLayer/Right_Buttons/Jump"]
position = Vector2( 56, 18 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 4 )

[node name="Attack" type="TouchScreenButton" parent="CanvasLayer/Right_Buttons"]
self_modulate = Color( 1, 1, 1, 0.176471 )
position = Vector2( -118, -124 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 5 )

[node name="ATTACK" type="TouchScreenButton" parent="CanvasLayer/Right_Buttons/Attack"]
position = Vector2( 79.9998, 50 )
scale = Vector2( 3, 3 )
normal = ExtResource( 6 )

[node name="Dash" type="TouchScreenButton" parent="CanvasLayer/Right_Buttons"]
self_modulate = Color( 1, 1, 1, 0.176471 )
position = Vector2( -204, -276 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 5 )

[node name="DASH" type="TouchScreenButton" parent="CanvasLayer/Right_Buttons/Dash"]
position = Vector2( 84.9999, 53 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 7 )
[connection signal="pressed" from="CanvasLayer/Left_Buttons/LEFT" to="." method="_on_LEFT_pressed"]
[connection signal="released" from="CanvasLayer/Left_Buttons/LEFT" to="." method="_on_LEFT_released"]
[connection signal="pressed" from="CanvasLayer/Left_Buttons/RIGHT" to="." method="_on_RIGHT_pressed"]
[connection signal="released" from="CanvasLayer/Left_Buttons/RIGHT" to="." method="_on_RIGHT_released"]
[connection signal="pressed" from="CanvasLayer/Right_Buttons/Jump" to="." method="_on_Jump_pressed"]
[connection signal="released" from="CanvasLayer/Right_Buttons/Jump" to="." method="_on_Jump_released"]
[connection signal="pressed" from="CanvasLayer/Right_Buttons/Jump/JUMP" to="." method="_on_JUMP_pressed"]
[connection signal="released" from="CanvasLayer/Right_Buttons/Jump/JUMP" to="." method="_on_JUMP_released"]
[connection signal="pressed" from="CanvasLayer/Right_Buttons/Attack" to="." method="_on_Attack_pressed"]
[connection signal="released" from="CanvasLayer/Right_Buttons/Attack" to="." method="_on_Attack_released"]
[connection signal="pressed" from="CanvasLayer/Right_Buttons/Attack/ATTACK" to="." method="_on_ATTACK_pressed"]
[connection signal="released" from="CanvasLayer/Right_Buttons/Attack/ATTACK" to="." method="_on_ATTACK_released"]
[connection signal="pressed" from="CanvasLayer/Right_Buttons/Dash" to="." method="_on_Dash_pressed"]
[connection signal="released" from="CanvasLayer/Right_Buttons/Dash" to="." method="_on_Dash_released"]
[connection signal="pressed" from="CanvasLayer/Right_Buttons/Dash/DASH" to="." method="_on_DASH_pressed"]
[connection signal="released" from="CanvasLayer/Right_Buttons/Dash/DASH" to="." method="_on_DASH_released"]
